@@ -4,6 +4,10 @@ adhocracy Changelog
 1.2beta2dev
 -----------
 
+- add the possibility to overwrite templates in <adhocracy.site>/templates 
+  directory (like it's possible for static resources and static pages already.
+  New templates there need a server restart to be picked up.
+  [csenger]
 - delgateables can have category badgets [joka]
 - instances can have badgets, they are only valid inside that instance [joka]
 - added option to set the smtp port [joka]
